@@ -2,6 +2,13 @@
 \name{NEWS}
 \title{NEWS file for the basefun package}
 
+\section{Changes in Version 1.0-3 (2019-01-16)}{
+  \itemize{
+    \item{Bernstein(log()) is possible with new \code{log_first} argument.}
+    \item{Fix > length 1 issues.}
+  }
+}
+
 \section{Changes in Version 1.0-2 (2018-09-17)}{
   \itemize{
     \item{Constrain Bernstein to zero second derivative at the support when
@@ -9,6 +16,7 @@
           corresponding densities in \pkg{mlt}.}
   }
 }
+
 
 \section{Changes in Version 1.0-1 (2018-03-27)}{
   \itemize{
